--- a/server/.env
+++ b/server/.env
@@ -3,19 +3,12 @@ BASE_URL = http://localhost:3000/
 
 
 # MONGO_URI
-MONGO_URI = mongodb+srv://lethilong:lethilong538445664@cluster0.xkpbx.mongodb.net/iot_smart_home?retryWrites=true&w=majority
+# MONGO_URI = mongodb+srv://lethilong:lethilong538445664@cluster0.xkpbx.mongodb.net/iot_smart_home?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://nhat104:nhat1042001@smarthome.gimaqgc.mongodb.net/?retryWrites=true&w=majority
 
 #port
-PORT = 8080
+PORT=4000
 
 #JWT
 JWT_SECRET = lethilongg
 JWT_EXPIRE = 3d
-
-#mqtt
-MQTT_URL = 'mqtt://broker.hivemq.com:1883'
-MQTT_CLIENTID = 'iot_group8'
-MQTT_USERNAME = 'iot_group8'
-MQTT_PASSWORD = '12345678'
-MQTT_TOPIC_CONTROL = 'iot/group8/control'
-MQTT_TOPIC_DATA = 'iot/group8/data'
