--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.3",
     "mqtt": "^4.3.7",
     "multer": "^1.4.5-lts.1",
+    "onoff": "^6.0.3",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
