--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 REACT_APP_PREFIX_LOCAL = "smart-home"
-REACT_APP_API="http://localhost:4000/api"
-REACT_APP_IMAGE="http://localhost:4000"
-# REACT_APP_API=http://10.10.0.1:4000/api
-# REACT_APP_IMAGE=http://10.10.0.1:4000
+# REACT_APP_API="http://localhost:4000/api"
+# REACT_APP_IMAGE="http://localhost:4000"
+REACT_APP_API=http://10.10.0.1:4000/api
+REACT_APP_IMAGE=http://10.10.0.1:4000
