add publisher, subcriber, interact with mqtt

--- a/server/.env
+++ b/server/.env
@@ -10,5 +10,13 @@ MONGO_URI=mongodb+srv://nhat104:nhat1042001@smarthome.gimaqgc.mongodb.net/?retry
 PORT=4000
 
 #JWT
-JWT_SECRET = lethilongg
+JWT_SECRET = mysecret
 JWT_EXPIRE = 3d
+
+#mqtt
+MQTT_URL = 'mqtt://broker.hivemq.com:1883'
+MQTT_CLIENTID = 'nhatmm'
+MQTT_USERNAME = 'nhatmm'
+MQTT_PASSWORD = '123456'
+MQTT_TOPIC_CONTROL = 'nhatmm/control'
+MQTT_TOPIC_DATA = 'nhatmm/data'
